fix(atto): header and footer banner z-index

--- a/css/atto.css
+++ b/css/atto.css
@@ -728,25 +728,25 @@ body:has(>footer[role="banner"]) {
 	padding-bottom: 0;
 }
 
-header[role="banner"] {
+header[role="banner"],
+footer[role="banner"] {
+	z-index: 100;
 	position: sticky;
-	top: 0;
 	display: block;
 	max-width: 100%;
-	margin: 0 0 2rem 0;
 	padding: 1rem;
 	background-color: var(--atto-color-bg-2);
+}
+
+header[role="banner"] {
+	top: 0;
+	margin: 0 0 2rem 0;
 	box-shadow: 0px 20px 16px 0px rgba(0, 0, 0, 0.2);
 }
 
 footer[role="banner"] {
-	position: sticky;
 	bottom: 0;
-	display: block;
-	max-width: 100%;
 	margin: 2rem 0 0 0;
-	padding: 1rem;
-	background-color: var(--atto-color-bg-2);
 	box-shadow: 0px -20px 16px 0px rgba(0, 0, 0, 0.2);
 }
 
